--- a/app/src/main/res/layout/third_fragment.xml
+++ b/app/src/main/res/layout/third_fragment.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewSecondTab"
+        android:id="@+id/textViewThirdTab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
